# entities/search_tasks_params.go
@@ -1,0 +1,10 @@
+package entities
+
+import (
+	"time"
+)
+
+type SearchTasksParams struct {
+	Status *string `json:"status,omitempty"`
+	Deadline *time.Time `json:"deadline,omitempty"`
+}
