# openapi.yaml
@@ -5,8 +5,11 @@ info:
 paths:
   /tasks:
     get:
-      summary: Get all tasks
+      summary: Get user tasks with optional filters
       operationId: getUserTasks
+      parameters:
+        - $ref: '#/components/parameters/Status'
+        - $ref: '#/components/parameters/Deadline'
       responses:
         '200':
           description: A list of all tasks
@@ -256,6 +259,22 @@ components:
       type: http
       scheme: bearer
       bearerFormat: JWT
+  parameters:
+    Status:
+      in: query
+      name: status
+      description: Search tasks with given status
+      required: false
+      schema:
+        type: string
+    Deadline:
+      in: query
+      name: deadline
+      description: Search tasks by its deadline
+      required: false
+      schema:
+        type: string
+        format: date
   responses:
     InternalServerError:
       description: Internal server error
